bookinfo-vs.yaml
# apiVersion: networking.istio.io/v1alpha3
# kind: VirtualService
# metadata:
#   name: bookinfo
# spec:
#   hosts:
#   - "*"
#   gateways:
#   - bookinfo-gateway
#   http:
#   - match:
#     - uri:
#         exact: /productpage
#     - uri:
#         prefix: /static
#     - uri:
#         exact: /login
#     - uri:
#         exact: /logout
#     - uri:
#         prefix: /api/v1/products
#     route:
#     - destination:
#         host: productpage
#         port:
#           number: 9080
#   - match:
#       uri:
#         prefix:  /keycloak
#     route:
#     -  destination:
#         host:  keyclock
#         port:
#           number:  8080

#  ---

apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: bookinfo
  namespace: default
spec:
  gateways:
  - bookinfo-gateway
  hosts:
  - bookinfo.hpcsvc.io
  http:
  - match:
    - uri:
        exact: /productpage
    - uri:
        prefix: /static
    - uri:
        exact: /login
    - uri:
        exact: /logout
    - uri:
        prefix: /api/v1/products
    route:
    - destination:
        host: productpage
        port:
          number: 9080

---

apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: keycloak
  namespace: default
spec:
  gateways:
  - bookinfo-gateway
  hosts:
  - keycloak.bookinfo.hpcsvc.io
  http:
  - match:
    - uri:
        prefix: /
    route:
    -  destination:
        host:  keycloak.default.svc.cluster.local
        port:
          number:  8080
