vs.yaml
# apiVersion: networking.istio.io/v1alpha3
# kind: VirtualService
# metadata:
#   name: bookinfo
# spec:
#   hosts:
#   - "*"
#   gateways:
#   - bookinfo-gateway
#   http:
#   - match:
#     - uri:
#         exact: /productpage
#     - uri:
#         prefix: /static
#     - uri:
#         exact: /login
#     - uri:
#         exact: /logout
#     - uri:
#         prefix: /api/v1/products
#     route:
#     - destination:
#         host: productpage
#         port:
#           number: 9080
#   - match:
#       uri:
#         prefix:  /keycloak
#     route:
#     -  destination:
#         host:  keyclock
#         port:
#           number:  8080

#  ---

apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: bookinfo
  namespace: default
spec:
  gateways:
  - keycloak-gateway
  hosts:
  - bookinfo.hpcsvc.io
  http:
  - match:
    - uri:
        exact: /productpage
    - uri:
        prefix: /static
    - uri:
        exact: /login
    - uri:
        exact: /logout
    - uri:
        prefix: /api/v1/products
    route:
    - destination:
        host: productpage
        port:
          number: 9080

---
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: keycloak-gateway
  namespace: default
spec:
  selector:
    istio: ingressgateway
  servers:
  - hosts:
    - keycloak.bookinfo.hpcsvc.io
    - bookinfo.hpcsvc.io
    port:
      name: http
      number: 80
      protocol: HTTP
    tls:
      httpsRedirect: true
  - hosts:
    - keycloak.bookinfo.hpcsvc.io
    - bookinfo.hpcsvc.io
    port:
      name: https-443
      number: 443
      protocol: HTTP
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: keycloak
  namespace: default
spec:
  gateways:
  - keycloak-gateway
  hosts:
  - keycloak.bookinfo.hpcsvc.io
  http:
  - match:
    - uri:
        prefix: /
    route:
    -  destination:
        host:  keycloak.default.svc.cluster.local
        port:
          number:  8080
---
# apiVersion: networking.istio.io/v1beta1
# kind: VirtualService
# metadata:
#   name: nginx
#   namespace: default
# spec:
#   gateways:
#   - keycloak-gateway
#   hosts:
#   - bookinfo.hpcsvc.io
#   http:
#   - match:
#     - uri:
#         prefix: /
#     route:
#     -  destination:
#         host:  nginx.default.svc.cluster.local
#         port:
#           number:  80
