authorize_productpage_for_reviews.yaml
# Run the following to create a policy reviews-viewer to allow the productpage workload, 
# which issues requests using the cluster.local/ns/default/sa/bookinfo-productpage service account, 
# to access the reviews workload through GET methods:

apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: "reviews-viewer"
  namespace: default
spec:
  selector:
    matchLabels:
      app: reviews
  action: ALLOW
  rules:
  - from:
    - source:
        principals: ["cluster.local/ns/default/sa/bookinfo-productpage"]
    to:
    - operation:
        methods: ["GET"]
