authorize_reviews_for_ratings.yaml
#Currently, we are only allowing the service account for the bookinfo reviews application access to ratings

apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
 name: ratings-viewer
 namespace: default
spec:
 selector:
   matchLabels:
     app: ratings
 action: ALLOW
 rules:
 - from:
   - source:
       principals:
       - cluster.local/ns/default/sa/bookinfo-reviews
   to:
   - operation:
       methods:
       - GET
