deny_without_jwt.yaml
# What if we wanted to let in only the user with email “user1@solo.io”? Let’s see how to do that with JWT claims validation.  
# To set this up, let’s first create a rule to deny traffic that does not have a JWT. To do this, apply the following policy:

apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
 name: deny-no-jwt
spec:
 selector:
   matchLabels:
     app: ratings
 action: DENY
 rules:
 - from:
   - source:
       notRequestPrincipals: ["*"]
